@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-12-22T01:06:36Z",
+  "timestamp" : "2025-12-24T01:03:04Z",
   "count_outdated" : 126,
   "uniques_outdated" : 108,
-  "count" : 129,
-  "uniques" : 111,
+  "count" : 130,
+  "uniques" : 112,
   "clones" : [
     {
       "timestamp": "2025-12-12T00:00:00Z",
@@ -16,6 +16,15 @@
     },
     {
       "timestamp": "2025-12-17T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-12-23T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
