@@ -1,6 +1,6 @@
 {
-  "count": 3,
-  "uniques": 3,
+  "count": 4,
+  "uniques": 4,
   "clones": [
     {
       "timestamp": "2025-12-12T00:00:00Z",
@@ -9,6 +9,11 @@
     },
     {
       "timestamp": "2025-12-17T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-12-23T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
